--- a/Log-001/index.html
+++ b/Log-001/index.html
@@ -22,7 +22,7 @@
     <div class="metadata">📡 Log_001 // MooreSignal // Sector: IP2</div>
     
     <!-- Update the image source here -->
-    <img src="" alt="MooreSignal Performance Capture">
+    <img src="mooresignal_001.jpg" alt="MooreSignal Performance Capture">
 
     <div class="haiku">
 	Submerged in each song.<br>
@@ -44,3 +44,4 @@
 
 </body>
 </html>
+
