--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>Redirecting to MooreSignal // Log_001</title>
-    <!-- Replace 'log-001/index.html' with the destination you want -->
-    <meta http-equiv="refresh" content="0; URL='./log-001/index.html'">
-    <link rel="canonical" href="./log-001/index.html">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>THE MOORE SIGNAL // Poetry Through Play</title>
+    <style>
+        body { background-color: #050505; color: #b0b0b0; font-family: 'Courier New', Courier, monospace; display: flex; flex-direction: column; align-items: center; min-height: 100vh; margin: 0; padding: 60px 20px; line-height: 1.6; }
+        
+        header { text-align: center; margin-bottom: 80px; border-bottom: 1px solid #1a1a1a; padding-bottom: 40px; width: 100%; max-width: 700px; }
+        header h1 { letter-spacing: 8px; color: #ffffff; margin-bottom: 10px; font-size: 1.5rem; pointer-events: none; }
+        .status-line { color: #00ffcc; font-size: 0.8rem; letter-spacing: 2px; text-transform: uppercase; }
+        .sys-info { font-size: 0.7rem; color: #444; margin-top: 15px; line-height: 1.6; }
+
+        .gallery-item { max-width: 700px; border-bottom: 1px solid #1a1a1a; padding: 60px 0; margin-bottom: 40px; width: 100%; }
+        img { width: 100%; border: 1px solid #222; margin-bottom: 30px; filter: grayscale(10%) contrast(110%); }
+        
+        .haiku { font-family: 'Georgia', serif; font-style: italic; font-size: 1.4rem; color: #ffffff; text-align: center; margin-bottom: 40px; letter-spacing: 1px; }
+        .metadata { font-size: 0.75rem; color: #00ffcc; text-transform: uppercase; margin-bottom: 15px; letter-spacing: 1px; }
+        .archivist-note { font-size: 0.95rem; color: #888; border-left: 2px solid #333; padding-left: 20px; margin: 30px 0; }
+
+        footer { margin-top: 100px; font-size: 0.7rem; color: #333; text-align: center; border-top: 1px solid #111; padding-top: 40px; width: 100%; max-width: 700px; }
+        a { color: #555; text-decoration: none; transition: 0.3s; }
+        a:hover { color: #00ffcc; }
+    </style>
 </head>
-<body style="background:#0a0a0a; color:#555; font-family:monospace; display:flex; justify-content:center; align-items:center; height:100vh;">
-    <p>📡 Redirecting to active signal...</p>
-</body>
-</html>
+<body>
+
+<header>
+    <h1>THE MOORE SIGNAL</h1>
+    <p class="status-line">Status: 🟢 Transmission Active // Archive: Poetry Through Play</p>
+    <div class="sys-info">
+        Unit: MooreSignal // Frequency: Irregular <br>
+        Source: Virtual Performance // Protocol: High-Sync
+    </div>
+</header>
