--- a/index.html
+++ b/index.html
@@ -34,3 +34,35 @@
         Source: Virtual Performance // Protocol: High-Sync
     </div>
 </header>
+
+<!-- SYNCHRONIZATION LOG #001 -->
+<div class="gallery-item" id="log-001">
+    <div class="metadata">Log #001 // SMOOTH // 2026.02.08</div>
+    <!-- Make sure this filename matches your uploaded image -->
+    <img src="mooresignal_001.jpg" alt="MooreSignal Performance Capture">
+    <div class="haiku">
+        Glass lens, tinted dark,<br>
+        Counting beats in silent space—<br>
+        The signal is caught.
+    </div>
+    <div class="archivist-note">
+        <strong>The Archivist’s Log:</strong> I was submerged in the song, blending the soul with rhythm, melting in smooth beats. This shot preserves a momentary time blip—an instance where indelible threads encapsulated the digital and physical world.
+    </div>
+</div>
+
+<!-- SYNCHRONIZATION LOG #002 (PENDING) -->
+<div class="gallery-item" id="log-002" style="opacity: 0.3; border-style: dashed; border-width: 1px; padding: 40px;">
+    <div class="metadata">Log #002 // [ DATA ENCRYPTED ] // PENDING</div>
+    <div style="height: 300px; display: flex; align-items: center; justify-content: center; background: #0a0a0a; border: 1px dashed #222; margin-bottom: 30px;">
+        <p style="letter-spacing: 5px; color: #222;">📡 SIGNAL PENDING...</p>
+    </div>
+    <div class="haiku" style="color: #222;">Stay tuned to the line.</div>
+</div>
+
+<footer>
+    <p>Visuals rendered via Idol Party 2. <br> Styling & Performance by The Archivist.</p>
+    <p><a href="https://github.com">← Return to Terminal</a></p>
+</footer>
+
+</body>
+</html>
