--- a/index.html
+++ b/index.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>THE MOORE SIGNAL // Poetry Through Play</title>
     <style>
+        /* Base Styles (same as before) */
         body { background-color: #050505; color: #b0b0b0; font-family: 'Courier New', Courier, monospace; display: flex; flex-direction: column; align-items: center; min-height: 100vh; margin: 0; padding: 60px 20px; line-height: 1.6; }
-        
         header { text-align: center; margin-bottom: 80px; border-bottom: 1px solid #1a1a1a; padding-bottom: 40px; width: 100%; max-width: 700px; }
         header h1 { letter-spacing: 8px; color: #ffffff; margin-bottom: 10px; font-size: 1.5rem; pointer-events: none; }
         .status-line { color: #00ffcc; font-size: 0.8rem; letter-spacing: 2px; text-transform: uppercase; }
         .sys-info { font-size: 0.7rem; color: #444; margin-top: 15px; line-height: 1.6; }
-
         .gallery-item { max-width: 700px; border-bottom: 1px solid #1a1a1a; padding: 60px 0; margin-bottom: 40px; width: 100%; }
         img { width: 100%; border: 1px solid #222; margin-bottom: 30px; filter: grayscale(10%) contrast(110%); }
-        
         .haiku { font-family: 'Georgia', serif; font-style: italic; font-size: 1.4rem; color: #ffffff; text-align: center; margin-bottom: 40px; letter-spacing: 1px; }
         .metadata { font-size: 0.75rem; color: #00ffcc; text-transform: uppercase; margin-bottom: 15px; letter-spacing: 1px; }
         .archivist-note { font-size: 0.95rem; color: #888; border-left: 2px solid #333; padding-left: 20px; margin: 30px 0; }
-
         footer { margin-top: 100px; font-size: 0.7rem; color: #333; text-align: center; border-top: 1px solid #111; padding-top: 40px; width: 100%; max-width: 700px; }
         a { color: #555; text-decoration: none; transition: 0.3s; }
         a:hover { color: #00ffcc; }
+
+        /* --- Pulse Effect for Pending Signal --- */
+        @keyframes pulse {
+            0% { opacity: 0.3; }
+            50% { opacity: 1; }
+            100% { opacity: 0.3; }
+        }
+        .pulsing-signal {
+            animation: pulse 2s infinite ease-in-out;
+            color: #00ffcc !important; /* Forces the text to be neon green/cyan while pulsing */
+        }
     </style>
 </head>
 <body>
@@ -37,9 +45,8 @@
 
 <!-- SYNCHRONIZATION LOG #001 -->
 <div class="gallery-item" id="log-001">
-    <div class="metadata">Log #001 // SMOOTH // 2026.02.08</div>
-    <!-- Make sure this filename matches your uploaded image -->
-    <img src="mooresignal_001.jpg" alt="MooreSignal Performance Capture">
+    <div class="metadata">Log #001 // Submerged // 2026.02.08</div>
+    <img src="mooresignal_001.jpg" alt="Performance Capture">
     <div class="haiku">
         Glass lens, tinted dark,<br>
         Counting beats in silent space—<br>
@@ -51,12 +58,14 @@
 </div>
 
 <!-- SYNCHRONIZATION LOG #002 (PENDING) -->
-<div class="gallery-item" id="log-002" style="opacity: 0.3; border-style: dashed; border-width: 1px; padding: 40px;">
+<div class="gallery-item" id="log-002" style="opacity: 0.5; border-style: dashed; border-width: 1px; padding: 40px;">
     <div class="metadata">Log #002 // [ DATA ENCRYPTED ] // PENDING</div>
     <div style="height: 300px; display: flex; align-items: center; justify-content: center; background: #0a0a0a; border: 1px dashed #222; margin-bottom: 30px;">
-        <p style="letter-spacing: 5px; color: #222;">📡 SIGNAL PENDING...</p>
+        <p class="pulsing-signal" style="letter-spacing: 5px; font-size: 1rem;">
+            📡 SIGNAL PENDING...
+        </p>
     </div>
-    <div class="haiku" style="color: #222;">Stay tuned to the line.</div>
+    <div class="haiku" style="color: #444;">Stay tuned to the line.</div>
 </div>
 
 <footer>
