--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
 
 <!-- SYNCHRONIZATION LOG #001 -->
 <div class="gallery-item" id="log-001">
-    <div class="metadata">Log #001 // Submerged // 2026.02.08</div>
+    <div class="metadata">Log #001 // SMOOTH</div>
     <img src="mooresignal_001.jpg" alt="Performance Capture">
     <div class="haiku">
-        Glass lens, tinted dark,<br>
-        Counting beats in silent space—<br>
-        The signal is caught.
+	    Submerged in each song.<br>
+        Blending the soul with rhythm—<br>
+        Melting in smooth beats<br>
     </div>
     <div class="archivist-note">
-        <strong>The Archivist’s Log:</strong> I was submerged in the song, blending the soul with rhythm, melting in smooth beats. This shot preserves a momentary time blip—an instance where indelible threads encapsulated the digital and physical world.
+        <strong>The Archivist’s Log:</strong> Date: 2026.02.08.
     </div>
 </div>
 
