--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <!-- SYNCHRONIZATION LOG #001 -->
 <div class="gallery-item" id="log-001">
     <div class="metadata">Log #001 // SMOOTH</div>
-    <img src="mooresignal_001.jpg" alt="Performance Capture">
+    <img src="/img/mooresignal_001.jpg" alt="Performance Capture">
     <div class="haiku">
 	    Submerged in each song.<br>
         Blending the soul with rhythm—<br>
