--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         Melting in smooth beats<br>
     </div>
     <div class="archivist-note">
-        <strong>The Archivist’s Log:</strong> Date: 2026.02.08.
+        <strong>The Archivist’s Log:</strong> Style: POP | Date: 2026.02.08 
     </div>
 </div>
 
