--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
         Melting in smooth beats<br>
     </div>
     <div class="archivist-note">
-        <strong>The Archivist’s Log:</strong>| Date: 2026.02.08 | Style: POP |
-    </div>
+        <strong>The Archivist’s Log: Style - Pop </strong>| Date: 2026.02.08 |
 </div>
 
 <!-- SYNCHRONIZATION LOG #002 (PENDING) -->
