--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <!-- SYNCHRONIZATION LOG #001 -->
 <div class="gallery-item" id="log-001">
-    <div class="metadata">Log #001 // SMOOTH</div>
+    <div class="metadata">Log #001 // SMOOTH BEATS</div>
     <img src="https://github.com/Cyber-Chic/poetry-through-play/blob/main/img/mooresignal_001.jpg?raw=true" alt="Performance Capture">
     <div class="haiku">
 	    Submerged in each song.<br>
@@ -53,7 +53,7 @@
         Melting in smooth beats<br>
     </div>
     <div class="archivist-note">
-        <strong>The Archivist’s Log: Style - Pop </strong>| Date: 2026.02.08 |
+        <strong>The Archivist’s Log: Style ~ Pop </strong>| Date: 2026.02.08 |
 </div>
 
 <!-- SYNCHRONIZATION LOG #002 (PENDING) -->
