--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <!-- SYNCHRONIZATION LOG #001 -->
 <div class="gallery-item" id="log-001">
-    <div class="metadata">Log #001 // SMOOTH BEATS</div>
+    <div class="metadata">Log #001 // SMOOTH BEATS | Contemporary Haiku</div>
     <img src="https://github.com/Cyber-Chic/poetry-through-play/blob/main/img/mooresignal_001.jpg?raw=true" alt="Performance Capture">
     <div class="haiku">
 	    Submerged in each song.<br>
