--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <!-- SYNCHRONIZATION LOG #001 -->
 <div class="gallery-item" id="log-001">
     <div class="metadata">Log #001 // SMOOTH BEATS | Contemporary Haiku</div>
-    <img src="https://github.com/Cyber-Chic/poetry-through-play/blob/main/img/feb%20log.jpg?raw=true">
+    <img src="https://github.com/Cyber-Chic/poetry-through-play/blob/main/img/feb%20log%203.jpg?raw=true">
     <div class="haiku">
 	    Submerged in each song.<br>
         Blending the soul with rhythm—<br>
