--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>THE MOORE SIGNAL // Poetry Through Play</title>
     <style>
         /* --- CORE TERMINAL STYLES --- */
-        body { background-color: #050505; color: #b0b0b0; font-family: 'Courier New', Courier, monospace; display: flex; flex-direction: column; align-items: center; min-height: 100vh; margin: 0; padding: 40px 20px; line-height: 1.6; }
+        body { 
+            background-color: #050505; 
+            color: #b0b0b0; 
+            font-family: 'Courier New', Courier, monospace; 
+            display: flex; 
+            flex-direction: column; 
+            align-items: center; 
+            min-height: 100vh; 
+            margin: 0; 
+            padding: 40px 20px; 
+            line-height: 1.6; 
+        }
         
         header { text-align: center; margin-bottom: 20px; width: 100%; max-width: 700px; }
         header h1 { letter-spacing: 8px; color: #ffffff; margin-bottom: 10px; font-size: 1.5rem; pointer-events: none; }
@@ -14,14 +25,14 @@
         .status-line { color: #00ffcc; font-size: 0.75rem; letter-spacing: 2px; text-transform: uppercase; margin-bottom: 5px; }
         .sys-info { font-size: 0.65rem; color: #444; line-height: 1.4; text-transform: uppercase; }
 
-        /* --- THE SETLIST (OPTIMIZED) --- */
+        /* --- THE SETLIST --- */
         .setlist-container {
             background: #080808;
             border: 1px solid #1a1a1a;
             padding: 20px;
             width: 100%;
             max-width: 660px;
-            margin: 20px 0 60px 0; /* Tightened top, generous bottom before gallery */
+            margin: 20px 0 60px 0;
             font-size: 0.75rem;
         }
         .setlist-title {
@@ -48,6 +59,30 @@
         .haiku { font-family: 'Georgia', serif; font-style: italic; font-size: 1.3rem; color: #ffffff; text-align: center; margin: 30px 0; letter-spacing: 1px; line-height: 1.8; }
         .metadata { font-size: 0.7rem; color: #00ffcc; text-transform: uppercase; margin-bottom: 10px; letter-spacing: 2px; }
         .archivist-note { font-size: 0.85rem; color: #666; border-left: 1px solid #333; padding-left: 15px; margin-top: 20px; font-style: normal; }
+
+        /* --- CD COVER STYLING (LOG #002) --- */
+        .cd-cover {
+            width: 100%;
+            max-width: 500px;
+            aspect-ratio: 1 / 1;
+            margin: 0 auto 30px auto;
+            background: linear-gradient(45deg, #0a0a0a 25%, #050505 25%, #050505 50%, #0a0a0a 50%, #0a0a0a 75%, #050505 75%, #050505 100%);
+            background-size: 20px 20px;
+            border: 1px solid #222;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+            overflow: hidden;
+        }
+        .cd-label {
+            font-size: 0.6rem;
+            color: #00ffcc;
+            position: absolute;
+            bottom: 10px;
+            right: 10px;
+            letter-spacing: 2px;
+        }
 
         /* --- ANIMATIONS --- */
         @keyframes pulse { 0% { opacity: 0.3; } 50% { opacity: 1; } 100% { opacity: 0.3; } }
@@ -87,7 +122,7 @@
 <!-- LOG #001 -->
 <div class="gallery-item" id="log-001">
     <div class="metadata">LOG #001 // SMOOTH BEATS</div>
-    <img src="https://github.com/Cyber-Chic/poetry-through-play/blob/main/img/feb_log.jpg?raw=true">
+    <img src="https://github.com/Cyber-Chic/poetry-through-play/blob/main/img/feb_log.jpg?raw=true" alt="Log 001 Visual">
     <div class="haiku">
         Submerged in each song.<br>
         Blending the soul with rhythm—<br>
@@ -98,13 +133,21 @@
     </div>
 </div>
 
-<!-- LOG #002 (PENDING) -->
-<div class="gallery-item" id="log-002" style="opacity: 0.4; border-style: dashed; border-width: 1px; padding: 40px 0;">
-    <div class="metadata">LOG #002 // ENCRYPTED</div>
-    <div style="height: 250px; display: flex; align-items: center; justify-content: center; background: #080808; border: 1px dashed #222; margin-bottom: 20px;">
-        <p class="pulsing-signal" style="letter-spacing: 5px; font-size: 0.9rem;">📡 SIGNAL PENDING...</p>
+<!-- LOG #002 (PENDING CD COVER) -->
+<div class="gallery-item" id="log-002">
+    <div class="metadata">LOG #002 // PENDING TRANSMISSION</div>
+    <div class="cd-cover">
+        <p class="pulsing-signal" style="letter-spacing: 10px; font-size: 1rem;">📡 SIGNAL</p>
+        <div class="cd-label">MOORE_SIGNAL // VOL. 01</div>
     </div>
-    <div class="haiku" style="color: #333; font-size: 1rem;">Transmission intercepted. Awaiting decryption key.</div>
+    <div class="haiku" style="color: #444;">
+        Static in the air.<br>
+        A rhythm waits for the spark—<br>
+        Neon heart on hold.
+    </div>
+    <div class="archivist-note">
+        <strong>Status:</strong> Awaiting next frequency match. Data remains encrypted.
+    </div>
 </div>
 
 <footer>
