--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
         <div class="cd-label">MOORE_SIGNAL // VOL. 01</div>
     </div>
     <div class="haiku" style="color: #444;">
-        Static in the air.<br>
-        A rhythm waits for the spark—<br>
-        Neon heart on hold.
+        The rhythm's adrift.<br>
+         Pulsing through tomorrow's heart.<br>
+         — Manifesting soon—.
     </div>
     <div class="archivist-note">
         <strong>Status:</strong> Awaiting next frequency match. Data remains encrypted.
