--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <!-- LOG #001 -->
 <div class="gallery-item" id="log-001">
     <div class="metadata">LOG #001 // SMOOTH BEATS</div>
-    <img src="https://github.com" alt="Log 001">
+    <img src="https://github.com/Cyber-Chic/poetry-through-play/blob/main/img/feb_log.jpg?raw=true" alt="Log 001">
     <div class="haiku">Submerged in each song.<br>Blending the soul with rhythm—<br>Melting in smooth beats</div>
     <div class="archivist-note"><strong>Archivist’s Log:</strong> Style ~ Pop | Frequency: High | Ref: 2026.02.08</div>
 </div>
