--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         Pulsing through tomorrow's heart.<br>
         — Manifesting soon —
     </div>
-    <div class="archivist-note"><strong>Status:</strong> Awaiting next frequency match. Archive link active.</div>
+    <div class="archivist-note"><strong>Status:</strong> Analyzing frequencies of the signal — Stay tuned!</div>
 </div>
 
 <footer>
