--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="archivist-note"><strong>Archivist’s Log:</strong> Style ~ Pop | Frequency: High | Ref: 2026.02.08</div>
 </div>
 
-<!-- LOG #002 (PULSING CD COVER) -->
+<!-- LOG ENCRYPTED (PULSING CD COVER) -->
 <div class="gallery-item" id="log-002">
     <div class="metadata">LOG #002 // PENDING TRANSMISSION</div>
     <div class="cd-cover">
