--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 <!-- LOG ENCRYPTED (PULSING CD COVER) -->
 <div class="gallery-item" id="log-002">
-    <div class="metadata">LOG #002 // PENDING TRANSMISSION</div>
+    <div class="metadata">LOG ENCRYPTED // PENDING TRANSMISSION</div>
     <div class="cd-cover">
         <div class="signal-portal-mini"></div>
         <div class="cd-label">MOORE_SIGNAL // VOL. 01</div>
