--- a/index.html
+++ b/index.html
@@ -65,10 +65,33 @@
     <div class="track-entry" style="opacity: 0.2;"><span>03. SILENCE_REFLECTIVE</span><span>[ STANDBY ]</span></div>
 </div>
 
+    <!-- ASCII CHARACTER RECALIBRATION -->
+<div style="width: 100%; max-width: 700px; display: flex; justify-content: center; margin: 20px 0;">
+    <pre style="font-family: 'Courier New', monospace; font-size: 1.2rem; color: #ffffff; line-height: 1.2; pointer-events: none; text-shadow: 0 0 10px rgba(0, 255, 204, 0.3);">
+          (      )
+          /◕   ◕\
+          \  ▿  /
+           \   /  
+           \   /  
+          /|   |\
+         / |   | \ 🎤   ✧
+           |   |   |        ♬
+           |___|   |             🌟
+           |   |   |
+           |   |   |
+          /     \  |   ✧
+         (_______) |        ♬
+   __________|   |__|________
+  [ ⚡  📡  MooreSignal  📡  ⚡ ]
+  ««««««««««««««»»»»»»»»»»»»»
+    </pre>
+</div>
+
+
 <!-- LOG #001 -->
 <div class="gallery-item" id="log-001">
     <div class="metadata">LOG #001 // SMOOTH BEATS</div>
-    <img src="https://github.com/Cyber-Chic/poetry-through-play/blob/main/img/feb_log.jpg?raw=true" alt="Log 001">
+    
     <div class="haiku">Submerged in each song.<br>Blending the soul with rhythm—<br>Melting in smooth beats</div>
     <div class="archivist-note"><strong>Archivist’s Log:</strong> Style ~ Pop | Frequency: High | Ref: 2026.02.08</div>
 </div>
