--- a/index.html
+++ b/index.html
@@ -180,6 +180,32 @@
     <p>Visuals rendered via Idol Party 2. <br> Styling & Performance by The Archivist.</p>
     <p><a href="https://github.com">← Return to Terminal</a></p>
 </footer>
+<!-- HAIKU FREQUENCY TERMINAL -->
+<div class="standout-box" style="text-align: center;">
+    <p>📡 <strong>SIGNAL: [HAIKU_NAME]</strong></p>
+    
+    <audio id="haiku-audio" loop>
+        <source src="audio/haiku-01.mp3" type="audio/mpeg">
+    </audio>
+
+    <button onclick="toggleAudio()" class="archivist-stamp" id="audio-btn">
+        [ ▶️ INITIALIZE FREQUENCY ]
+    </button>
+</div>
+
+<script>
+function toggleAudio() {
+    const audio = document.getElementById('haiku-audio');
+    const btn = document.getElementById('audio-btn');
+    if (audio.paused) {
+        audio.play();
+        btn.textContent = "[ ⏸️ STABILIZE SIGNAL ]";
+    } else {
+        audio.pause();
+        btn.textContent = "[ ▶️ INITIALIZE FREQUENCY ]";
+    }
+}
+</script>
 
 </body>
 </html>
