--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 </div>
 
 <audio id="haiku-audio" loop>
-    <source src="Smooth Haiku.mp3" type="audio/mpeg">
+    <source src="smooth.mp3" type="audio/mpeg">
 </audio>
 
 <div class="ascii-container">
