--- a/index.html
+++ b/index.html
@@ -186,11 +186,11 @@
 </div>
 
 <div class="gallery-item" id="log-001">
-    <div class="metadata">LOG #001 // SMOOTH BEATS</div>
+    <div class="metadata">LOG #001 // SMOOTHLY MELTING BEAT</div>
     <div class="haiku">
-        Submerged in each song.<br>
-        Blending the soul with rhythm—<br>
-        Melting in smooth beats
+        Submerged in this song.<br>
+        Blending my soul with rhythm—<br>
+        Melting in the beat.
     </div>
     
     <!-- THE MINI TERMINAL BUTTON -->
