--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <div class="setlist-title">📡 CURRENT SETLIST</div>
     
     <div class="track-entry track-active">
-        <span>01. SMOOTH BEATS</span>
+        <span>01. SMOOTHLY MELTING BEAT</span>
         <button onclick="toggleAudio()" class="play-btn" id="audio-btn">[ ▶ INITIALIZE ]</button>
     </div>
     
@@ -188,7 +188,7 @@
 <div class="gallery-item" id="log-001">
     <div class="metadata">LOG #001 // SMOOTHLY MELTING BEAT</div>
     <div class="haiku">
-        Submerged in this song.<br>
+        Submerged in this sound<br>
         Blending my soul with rhythm—<br>
         Melting in the beat.
     </div>
